--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,12 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+nav a {
+	display: inline-block;
+	width:12%;
+	margin: 10px 0px 5px 15px;
+}
+
+header h1 {
+	font-size: 48px;
+}
