--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
 .container {
 	width: 85%;
 	margin: 0 auto;
@@ -76,12 +77,19 @@ h1, h2, h3, h4, h5 {
 }
 .navlinks, .navimg {
 	display: inline-block;
+	
+	
 		
 }
+
 .navlinks a{
 	text-decoration: none;
 	color: rosybrown;
 	padding-right: 8%;
+	
+}
+.navlinks a:hover{
+	color: black;
 }
 .headerleft, .headerright {
 	display: inline-block;
@@ -102,6 +110,35 @@ h1, h2, h3, h4, h5 {
 	display: inline-block;
 	width: 32%;
 	margin: 5% 0;
+}
+.services-left, .services-mid, .services-right {
+	display: inline-block;
+	width: 32%;
+	margin: 5% 0;
+}
+.book-button {
+	display: inline-block;
+	padding: 50px 0;
+	width: 96%;
+	height: 35%;
+	margin: 0, auto;
+	text-align: center;
+}
+.book-button a {
+	text-decoration: none;
+	color: white;
+	text-align: center;
+	height: 35px;
+	border: 5px inset rosybrown;
+	padding: 1% 2%;
+	background-color: black;
+}
+.book-button a:hover{
+	background-color: gray;
+	}
+.services img {
+	border: 5px inset rosybrown;
+	margin-bottom: 10%;
 }
 footer {
 	text-align: center;
